[gd_scene load_steps=11 format=2]

[ext_resource path="res://art/enemigos y personaje/golpes.png" type="Texture" id=1]
[ext_resource path="res://scenes/enemy/BrawlFighter.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 56, 104 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 536, 112 )

[sub_resource type="Animation" id=6]
resource_name = "attack1"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "attack2"

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5 ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 104, 120 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 32, 10 )

[node name="BrawlFighter" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 3
hframes = 4
frame = 6

[node name="EnemyHitbox" type="CollisionShape2D" parent="."]
position = Vector2( 8, 24 )
shape = SubResource( 1 )

[node name="DetectRadius" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius"]
position = Vector2( 8, 24 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack1 = SubResource( 6 )
anims/attack2 = SubResource( 7 )
anims/idle = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="AttackRadius" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRadius"]
position = Vector2( 0, 8 )
shape = SubResource( 9 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 88, -72 )
rotation = -0.165149
shape = SubResource( 8 )
disabled = true
[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="AttackRadius" to="." method="_on_AttackRadius_body_entered"]
[connection signal="body_exited" from="AttackRadius" to="." method="_on_AttackRadius_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
